--- a/Manuscript Analyses/manuscript_analysis.Rmd
+++ b/Manuscript Analyses/manuscript_analysis.Rmd
@@ -20,7 +20,7 @@ This document contains the analysis code and output for the manuscript entitled 
 
 The data preprocessing script can be found in the Manuscript Analyses subdirectory in this repo.
 
-All data processing and analyses were conducted using R Version 4.3.2.
+All data processing and analyses were conducted using R Version 4.4.1
 
 ```{r, echo = F, warning = F, message = F}
 
@@ -52,19 +52,23 @@ demo <- rio::import("participant_demo.csv")
 ## Listener Intelligibility and Cognition Scores
 data <- rio::import("cleaned_data.csv")
 
+## Younger adult df
+young_adult <- rio::import("cleaned_scored.csv") |>
+  dplyr::select(-group_number)
+
 ```
 
 First, pretest and posttest intelligibility was calculated as a percent words correct (pwc) score for each listener. Pretest PWC and PWC change (posttest-pretest) will be our outcome variables for the analyses.
 
 ```{r, warning = F, message = F}
 
-# Removing Participant 323 from the dataset (missing demographic and cognitive data)
+# Removing Participant 323 and 332 from the dataset (missing demographic and cognitive data)
 
 data <- data %>%
-  dplyr::filter(id != 323)
+  dplyr::filter(id != 323 & id != 332)
 
 demo <- demo %>%
-  dplyr::filter(id != 323)
+  dplyr::filter(id != 323 & id != 332)
 
 # Calculating pretest and posttest intelligibility for the listeners
 pl_int <- data %>%
@@ -181,6 +185,86 @@ cog_table %>%
   gt::gtsave("Tables/means_tabel.html")
 
 ```
+
+### Comparing Younger vs. Older Adults
+
+#### Age-Corrected
+
+The younger adult data comes from https://osf.io/y32qc/
+
+```{r}
+
+older_adult <- pl_int |>
+  dplyr::filter(type == "pretest") |>
+  dplyr::select(id, ends_with("_c"), ends_with("_u"), best_win) |>
+  dplyr::select(-c(fluid_cog_c, fluid_cog_u, pic_seq_c, pic_seq_u)) |>
+  dplyr::rename(win = best_win) |>
+  dplyr::mutate(group = "old") |>
+  dplyr::filter()
+
+young_adult <- young_adult |>
+  dplyr::select(-c(age_in_years, win_l, win_r, fluid_cog_c, fluid_cog_u, pic_seq_c, pic_seq_u))
+
+compare_df <- rbind(older_adult, young_adult)
+
+compare_table_c <- compare_df %>%
+  dplyr::select(id, ends_with("_c"), win, group) %>% 
+  dplyr::rename(
+    `Working Memory` = list_sort_c,
+    `Inhibitory Control` = flanker_c,
+    `Cognitive Flexibility` = card_sort_c,
+    `Receptive Vocabulary` = vocab_c,
+    `Processing Speed` = pattern_c,
+    `Words in Noise Threshold` = win
+  ) %>%
+  select(-id) %>% 
+  tbl_summary(
+    by = group,
+    statistic = list(all_continuous() ~ "{mean} ({sd})"),
+    missing = "no",
+    digits = list(everything() ~ c(2))
+  ) %>% 
+  add_p() %>%
+  as_gt() 
+
+compare_table_c
+
+
+```
+
+
+#### Uncorrected Scores
+
+
+```{r}
+
+compare_table_u <- compare_df %>%
+  dplyr::select(id, ends_with("_u"), win, group) %>% 
+  dplyr::rename(
+    `Working Memory` = list_sort_u,
+    `Inhibitory Control` = flanker_u,
+    `Cognitive Flexibility` = card_sort_u,
+    `Receptive Vocabulary` = vocab_u,
+    `Processing Speed` = pattern_u,
+    `Words in Noise Threshold` = win
+  ) %>%
+  select(-id) %>% 
+  tbl_summary(
+    by = group,
+    statistic = list(all_continuous() ~ "{mean} ({sd})"),
+    missing = "no",
+    digits = list(everything() ~ c(2))
+  ) %>% 
+  add_p() %>%
+  as_gt() 
+
+compare_table_u
+
+
+```
+
+
+
 
 ## Intelligibility
 
